# Few-Shot-Selector

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
src/few_shot_selector/: __init__.py  __main__.py  cli.py  core.py  utils.py
src/few_shot_selector/data/: qa_examples.json
tests/: test_core.py  test_utils.py
